--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <a href="./contato.html">
             <li>Contato</li>
           </a>
+     
         </ul>
       </nav>
       <div class="spiderman-title">
@@ -36,7 +37,7 @@
       <h2>Quem Somos</h2>
       <p class="quem-somos-para">
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-        nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
+        nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat
         volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
         ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
         <br /><br />
